--- a/loan.html
+++ b/loan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loan Type Dropdown</title>
 
-    <link rel="stylesheet" href="loan.css">
+    <link rel="stylesheet" href="./styles/loan.css">
 </head>
 <body>
 
