--- a/final.html
+++ b/final.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="cssf/final.css">
     <link rel="stylesheet" href="cssf/body.css">
-    <link rel="stylesheet" type="text/css"  href="main.css">
+    <link rel="stylesheet" type="text/css"  href="./styles/main.css">
     
 </head>
 <body>
