--- a/personal.html
+++ b/personal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Loan Recommendation System</title>
 
-    <link rel="stylesheet" href="personal.css">
+    <link rel="stylesheet" href="./styles/personal.css">
 </head>
 <body>
     <header>
